--- a/CLassStyle.html
+++ b/CLassStyle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+in <!DOCTYPE html>
 <html>
 <head>
 	<title>Class Selector</title>
@@ -8,7 +8,7 @@
 		border: 5px double red;
 		text-align: center;
 		text-transform: capitalize;
-	}
+	} 
 	</style>
 </head>
 <body>
